--- a/_pages/tools.html
+++ b/_pages/tools.html
@@ -13,7 +13,7 @@ author_profile: true
 
 **FaMe** is a BPMN-driven framework for multi-robot system development. It facilitates the definition of robotic missions using BPMN collaborations, while leveraging the ROS2 framework for system execution.
 
-<p align="center">
+<p style="text-align: center">
   <img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/code.svg" width="20" height="20"> <a href="https://github.com/SaraPettinari/fame">Code</a>
   &nbsp;|&nbsp;
   <img src="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/6.x/svgs/solid/circle-info.svg" width="20" height="20"> <a href="https://pros.unicam.it/fame/">Documentation</a>
