--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,7 +14,7 @@ author_profile: true
 
 {% include base_path %}
 
-<!-- Check if publication categories are defined -->
+<!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
   <div class="publication-sections">
     {% for category in site.publication_category %}
@@ -24,11 +24,12 @@ author_profile: true
           {% continue %}
         {% endif %}
         {% unless title_shown %}
-          <h2 class="publication-category">{{ category[1].title }}</h2>
-          <hr class="section-divider"/>
+          <!-- Assign a class based on category -->
+          <h2 class="publication-category {{ category[0] | downcase }}">{{ category[1].title }}</h2>
+          <hr class="section-divider {{ category[0] | downcase }}"/>
           {% assign title_shown = true %}
         {% endunless %}
-        <div class="publication-card">
+        <div class="publication-card {{ category[0] | downcase }}">
           {% include archive-single.html %}
         </div>
       {% endfor %}
