--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,7 +8,7 @@ author_profile: true
 {% if site.author.googlescholar %}
   <div class="scholar-link">
     📚 You can also find my articles on 
-    <a href="{{ site.author.googlescholar }}" target="_blank">my Google Scholar profile</a>.
+    <a href="{{ site.author.googlescholar }}" target="_blank">Google Scholar</a>.
   </div>
 {% endif %}
 
@@ -26,7 +26,7 @@ author_profile: true
         {% unless title_shown %}
           <!-- Assign a class based on category -->
           <h2 class="publication-category {{ category[0] | downcase }}">{{ category[1].title }}</h2>
-          <hr class="section-divider {{ category[0] | downcase }}"/>
+          <hr class="section-divider"/>
           {% assign title_shown = true %}
         {% endunless %}
         <div class="publication-card {{ category[0] | downcase }}">
