--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -26,6 +26,7 @@ author_profile: true
         {% unless title_shown %}
           <!-- Assign a class based on category -->
           <h2 class="publication-category {{ category[0] | downcase }}">{{ category[1].title }}</h2>
+          <hr class="section-divider"/>
           {% assign title_shown = true %}
         {% endunless %}
         <div class="publication-card {{ category[0] | downcase }}">
