--- a/_pages/tools.html
+++ b/_pages/tools.html
@@ -30,8 +30,8 @@ author_profile: true
         {% if pub.tool == "fame" %}
           <li>
             <strong>{{ pub.title }}</strong><br>
-            <em>{{ pub.venue }}, {{ pub.date | date: "%Y" }}</em>
-            <p>[<a href="{{ pub.paperurl }}">View Paper</a>]</p>
+            <p><em>{{ pub.venue }}, {{ pub.date | date: "%Y" }}</em>
+            [<a href="{{ pub.paperurl }}">View Paper</a>]</p>
           </li>
         {% endif %}
       {% endfor %}
@@ -58,8 +58,8 @@ author_profile: true
         {% if pub.tool == "tale" %}
           <li>
             <strong>{{ pub.title }}</strong><br>
-            <em>{{ pub.venue }}, {{ pub.date | date: "%Y" }}</em>
-            <p>[<a href="{{ pub.paperurl }}">View Paper</a>]</p>
+            <p><em>{{ pub.venue }}, {{ pub.date | date: "%Y" }}</em>
+            [<a href="{{ pub.paperurl }}">View Paper</a>]</p>
           </li>
         {% endif %}
       {% endfor %}
@@ -86,8 +86,8 @@ author_profile: true
         {% if pub.tool == "soup" %}
           <li>
             <strong>{{ pub.title }}</strong><br>
-            <em>{{ pub.venue }}, {{ pub.date | date: "%Y" }}</em>
-            <p>[<a href="{{ pub.paperurl }}">View Paper</a>]</p>
+            <p><em>{{ pub.venue }}, {{ pub.date | date: "%Y" }}</em>
+            [<a href="{{ pub.paperurl }}">View Paper</a>]</p>
           </li>
         {% endif %}
       {% endfor %}
