[update] layout and info

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,10 +6,10 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="scholar-link">
+  <div class="scholar-link"><p>
     📚 You can also find my articles on 
-    <a href="{{ site.author.googlescholar }}" target="_blank">Google Scholar</a>.
-  </div>
+    <a href="{{ site.author.googlescholar }}" target="_blank">Google Scholar</a> and <a href="https://dblp.org/pid/309/1119.html"> dblp</a>.
+  </p></div>
 {% endif %}
 
 {% include base_path %}
