--- a/_pages/news.html
+++ b/_pages/news.html
@@ -14,6 +14,7 @@ author_profile: true
       event=news.event
       description=news.description
       website=news.website
+      website2=news.website2
       linkedin=news.linkedin
     %}
   {% endfor %}
