--- a/_pages/news.html
+++ b/_pages/news.html
@@ -16,6 +16,8 @@ author_profile: true
       website=news.website
       website2=news.website2
       linkedin=news.linkedin
+      image1=news.image1
+      image2=news.image2
     %}
   {% endfor %}
 </div>
