--- a/_pages/tools.html
+++ b/_pages/tools.html
@@ -10,6 +10,7 @@ author_profile: true
     {% include tool_card.html
       tool_class=tool.tool_class
       tool_name=tool.tool_name
+      tool_logo=tool.tool_logo
       tool_description=tool.tool_description
       tool_code_url=tool.tool_code_url
       tool_docs_url=tool.tool_docs_url
